@@ -16,36 +16,39 @@ sealed trait RichResponse[In, Out] {
 }
 
 /**
- * A [[ProtocolException]] represents a response which throws a thrift application
+ * A [[ProtocolExceptionResponse]] represents a response which throws a thrift application
  * exception of protocol error.
+ * @note while this is a public API, it is only intended for use by the generated code.
  *
  * @param exception a TApplicationException of protocol error
  */
-case class ProtocolException[In, Out] (
+case class ProtocolExceptionResponse[In, Out] (
   input: In,
   response: Buf,
   exception: TApplicationException
 ) extends RichResponse[In, Out]
 
 /**
- * A [[SuccessfulResult]] represents a successful response.
+ * A [[SuccessfulResponse]] represents a successful response.
+ * @note while this is a public API, it is only intended for use by the generated code.
  *
  * @param result a result contains deserialized successful response
  */
-case class SuccessfulResult[In, Out] (
+case class SuccessfulResponse[In, Out] (
   input: In,
   response: Buf,
   result: Out
 ) extends RichResponse[In, Out]
 
 /**
- * A [[ThriftExceptionResult]] represents a response which throws thrift application exceptions
+ * A [[ThriftExceptionResponse]] represents a response which throws thrift application exceptions
  * defined in IDL.
+ * @note while this is a public API, it is only intended for use by the generated code.
  *
- * @param result a result contains thrift application exceptions
+ * @param ex the thrift application exception
  */
-case class ThriftExceptionResult[In, Out] (
+case class ThriftExceptionResponse[In, Out] (
   input: In,
   response: Buf,
-  result: Out
+  ex: ThriftException
 ) extends RichResponse[In, Out]
